@startuml
'https://plantuml.com/class-diagram

note as decorator
装饰器模式
end note

interface Shape {
    void draw()
}

class Circle {
    void draw()
}

class Rectangle {
    void draw()
}

abstract class ShapeDecorator {
    protected Shape decoratedShape
    ShapeDecorator(Shape decoratedShape)
    void draw()
}

class RedShapeDecorator {
    RedShapeDecorator(Shape decoratedShape)
    void draw()
}

Shape <|..down Circle
Shape <|..down Rectangle
Shape <|..left ShapeDecorator
ShapeDecorator <|--down RedShapeDecorator
@enduml